[package]
version = "0.1.0"
name = "option-pricer-script"
edition = "2021"
default-run = "option-pricer-script"

[dependencies]
itertools = "0.12.1"
sp1-sdk = { git = "https://github.com/0xkanekiken/sp1.git" }

[build-dependencies]
sp1-helper = { git = "https://github.com/0xkanekiken/sp1.git" }

[[bin]]
name = "option-pricer-script"
path = "src/main.rs"
